# triton-windows

./: .gitignore  .pre-commit-config.yaml  BUILD-WINDOWS.md  BUILD.md  CHANGELOG-WINDOWS.md  CMakeLists.txt  GEMINI.md  README.md  WINDOWS-QUICKREF.md  add_explicit_type_id.py  build.ps1  build_output.txt  pyproject.toml  run_tests.ps1  setup.py  test_build_verification.ps1  test_comprehensive_proton.py  test_proton_disabled.py  test_proton_enabled.py  test_proton_enablement_verification.py
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: build-and-test-triton.yml  build-triton.yml
build_test_cmake/: CMakeCache.txt  DartConfiguration.tcl
examples/plugins/: CMakeLists.txt
include/triton/Tools/: PluginUtils.h
lib/: CMakeLists.txt
lib/Analysis/: Utility.cpp
lib/Conversion/TritonGPUToLLVM/: AllocateSharedMemory.cpp  AllocateWarpGroups.cpp  CMakeLists.txt  CanonicalizeLLVMIR.cpp  GlobalScratchMemoryAllocation.cpp  Utility.cpp  WarpSpecializeUtility.cpp
lib/Conversion/TritonInstrumentToLLVM/: InstrumentationToLLVM.cpp
lib/Conversion/TritonToTritonGPU/: CMakeLists.txt  RelayoutTritonGPU.cpp  TritonToTritonGPUPass.cpp
lib/Instrumentation/: PrintLoadStoreMemSpaces.cpp
lib/Plugins/: CMakeLists.txt  TritonPlugin.cpp
lib/Tools/: LayoutUtils.cpp
python/: build_helpers.py  pyproject.toml  setup.py
python/src/: interpreter.cc  ir.cc  main.cc
python/test/: conftest.py
python/triton/: __init__.py  _filecheck.py  knobs.py  profiler.py  windows_utils.py
python/tutorials/: 07-extern-functions.py  09-persistent-matmul.py  12-optional-profiler-usage.py
(+90 files in other folders)
